# GenPlanner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.actions.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_deploy.yml
app/: dependencies.py  init_dependencies.py  main.py
app/clients/: api_client.py  ecodonat_api_client.py  urban_api_client.py
app/common/: example_geometry.json  geometries.py  territory_balance_example.json
app/common/api_handlers/: api_handler.py  json_api_handler.py
app/common/auth/: bearer.py
app/common/config/: config.py
app/common/constants/: api_constants.py
app/common/exceptions/: exception_handler.py
app/common/geometries_dto/: fixed_points_example.json  geometries.py
app/common/geometries_dto/examples/: fixed_points_example.json  linestring_geometry.json
app/common/logging/: init_logger.py
app/gateways/: urban_api_gateway.py
app/gen_planner/: api_constants.py  gen_planner_api_service.py  gen_planner_controller.py  gen_planner_dto.py  gen_planner_schema.py  gen_planner_service.py  task_service.py
app/gen_planner/dto/: gen_planner_custom_dto.py  gen_planner_dto.py  gen_planner_func_dto.py
app/gen_planner/dto/examples/: __init__.py  base_open_api_example.py  openapi_examples.py  territory_balance_example.json
app/gen_planner/python/src/: 1.gpkg  __init__.py  _config.py  genplanner.py  geom_utils.py  poisson_sampling.ipynb  test_gdf_to_blocks.ipynb
app/gen_planner/rust/: Cargo.toml
app/gen_planner/rust/examples/: shlis.rs
app/gen_planner/rust/src/: lib.rs  loss_topo.rs
app/gen_planner/schema/: gen_planner_schema.py
app/system/: logs_router.py
gen_planner/python/src/: __init__.py  genplanner.py  geom_utils.py  poisson_sampling.ipynb
gen_planner/python/src/func_zones/: __init__.py  (+6 more)
gen_planner/rust/: Cargo.toml
gen_planner/rust/src/: lib.rs
src/block_generator/python/: genplanner.py  poisson_sampling.ipynb  shlis.gpkg  shlis1.gpkg  test.py
src/block_generator/rust/: Cargo.toml
(+34 files in other folders)
